fix: update overlapping class name

--- a/src/wheel/index.css
+++ b/src/wheel/index.css
@@ -1,4 +1,4 @@
-.container {
+.wheel-container {
   position: relative;
   background: transparent;
   margin: auto;
